welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: not found: value Direction
  setDirection(Direction.EAST)
               ^DwarfCode:21: error: not found: value deposeBiscuit
  deposeBiscuit()
  ^